--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TED Bilik Kursları İnformatika Olimpiada Hazırlığı - Sinif Bəlirləmə Sorğusu",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tailwind": "npx tailwindcss -i ./styles.css -o ./dist/styles.css --watch"
   },
   "repository": {
     "type": "git",
